--- a/public/client/assets/base/homepage.css
+++ b/public/client/assets/base/homepage.css
@@ -56,3 +56,7 @@
 .product-categories {
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
 }
+
+#expand-categories-child:checked + ul {
+    display: block;
+}
