--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2,49 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-/* .room-toogle:hover .room-categories {
-    display: block;
+.order-item-body {
+    @apply flex flex-col lg:flex-row py-2 px-4;
 }
-
-.room-categories {
-    top: calc(100% + 6px);
-    box-shadow: 0 1px 3.125rem 0 rgba(0, 0, 0, 0.4);
-}
-
-.room-categories::before {
-    content: "";
-    position: absolute;
-    border-color: transparent transparent #fff transparent;
-    border-width: 10px 10px;
-    border-style: solid;
-    top: -18px;
-    left: 10px;
-}
-
-.room-categories::after {
-    content: "";
-    position: absolute;
-    width: 66%;
-    height: 10%;
-    top: -14px;
-    left: 0;
-}
-
-.product-cell:hover {
-    border: 1px solid #666666d9;
-    transition: border 0.5s ease-out;
-}
-
-.product-cell:hover .product-actions {
-    display: flex;
-    transition: display 0.5s ease-out;
-}
-
-.divider {
-    background-color: #6e6e73;
-    display: block;
-    height: 3px;
-    margin: 1em 0;
-    max-width: 30px;
-    width: 100%;
-} */
